--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="main.css">
+    </head>
+    <body>
+        <nav>
+            <a href="specials.html">Specials</a>
+            <a href="merch.html">Merch</a>
+            <a href="about.html">About</a>
+            <a class="directions" href="directions.html">Directions</a>
+        </nav>
+        <h1>Must Be The Place</h1>
+    </body>
+</html>
