--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
-        <nav>
-            <a href="specials.html">Specials</a>
-            <a href="merch.html">Merch</a>
-            <a href="about.html">About</a>
-            <a class="directions" href="directions.html">Directions</a>
-        </nav>
-        <h1>Must Be The Place</h1>
+        <div class="parallax">
+            <div class="parallax-layer layer-front">
+                 <nav>
+                    <a href="specials.html">Specials</a>
+                    <a href="merch.html">Merch</a>
+                    <a href="about.html">About</a>
+                    <a class="directions" href="https://maps.app.goo.gl/KHuusXZW7TB8BsHW7">Directions</a>
+                </nav>
+                <h1>Must Be The Place</h1>
+                <a class="instagram" href="https://www.instagram.com/mustbetheplacewpg/">Instagram</a>
+            </div>    
+            <div class="parallax-layer big">
+                <img src="big.jpg" class="header">
+            </div>
+            <div class="parallax-layer bottom">
+                <img src="big.jpg">
+                <img src="big.jpg">
+                <img src="big.jpg">
+            </div>
+        </div>
     </body>
 </html>
