--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
                 <a class="instagram" href="https://www.instagram.com/mustbetheplacewpg/">Instagram</a>
             </div>    
             <div class="parallax-layer big">
-                <img src="big.jpg" class="header">
+                <img src="img/big.gif" class="header">
             </div>
             <div class="parallax-layer bottom">
-                <img src="big.jpg">
-                <img src="big.jpg">
-                <img src="big.jpg">
+                <img src="img/img1.jpg">
+                <img src="img/img2.jpg">
+                <img src="img/img3.jpg">
+                <img src="img/img5.jpg">
+                <img src="img/img4.jpg">
             </div>
         </div>
     </body>
