mobile layout nicer i feel

--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
                 <img src="img/big.gif" class="header">
             </div>
             <div class="parallax-layer bottom">
-                <img src="img/img1.jpg">
-                <img src="img/img2.jpg">
-                <img src="img/img3.jpg">
-                <img src="img/img5.jpg">
-                <img src="img/img4.jpg">
+                <img class="taiz" src="img/img1.jpg">
+                <img class="pine" src="img/img2.jpg">
+                <img class="col" src="img/img5.jpg">
             </div>
         </div>
     </body>
