--- a/merch.html
+++ b/merch.html
@@ -9,6 +9,6 @@
         <h1>We have merch!</h1>
         <p>Between hand printed yearly exclusive shirts and rotating custom stickers for all sorts of things, we have a variety of merch for you to choose from. Stop in to check out if we have anything special for the week! </p>
         <p>Big thanks to <a href="https://www.instagram.com/_erikjean/"> Erik </a>  who prints our shirts <3 </p>
-        <p>Note: most of our merch have a limited release and we do not keep extra stock from designs prior. If you see something you like, its a good idea to buy it before its gone and lost to the sands of time.</p>
+        <p>Note: most of our merch has a limited release and we do not keep extra stock from designs prior. If you see something you like, its a good idea to buy it before its gone and lost to the sands of time.</p>
     </body>
 </html>
