--- a/specials.html
+++ b/specials.html
@@ -5,5 +5,13 @@
     </head>
     <body>
         <h1>Specials</h1>
+        <div class="reg">
+            <img src="img/img8.jpg">
+            <span>Sunday: Homemade Corndog in Sweet Chili Heat Doritos</span>
+        </div>
+        <div class="past">
+            <img src="img/img7.jpg">
+            <span> Valentines 2024</span>
+        </div>
     </body>
 </html>
