--- a/about.html
+++ b/about.html
@@ -10,5 +10,10 @@
            <p> A group of 20 of us are planning to meet—will that be a problem?
                We are a small space with a capacity of 49 people. Depending on the night and time, it is very likely that everyone in your party will not be able to get in right away. On busy nights, we often have to run a line outside. If some of your group shows up an hour after others do, we can’t let them in before the other people in line who have been waiting. We do head counts and let as many people in as we can, but once we are at capacity, someone must leave for someone else to go in. If you want to bring a group, we suggest you keep your group fairly small, get to the bar early, and that you try to show up at roughly the same time. Explain to folks joining you that if they come late, they might have to wait in line. Another great option for your group might be to book out a private event - more information is available here.</p>
         </div>
+
+        <div>
+            <img style="height: 100vh;" src="layer1.jpg">
+            <img style="height: 100vh;" src="layer2.png">
+        </div>
     </body>
 </html>
