--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <a class="directions" href="https://maps.app.goo.gl/KHuusXZW7TB8BsHW7">Directions</a>
                 </nav>
                 <h1>Must Be The Place</h1>
-                <a class="instagram" href="https://www.instagram.com/mustbetheplacewpg/">Instagram</a>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960" fill="#e8eaed" class="arrow"><path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z"/></svg>
             </div>    
             <div class="parallax-layer big">
                 <img src="img/big.gif" class="header">
@@ -23,6 +23,8 @@
                 <img class="taiz" src="img/img1.jpg">
                 <img class="pine" src="img/img2.jpg">
                 <img class="col" src="img/img5.jpg">
+                <a class="instagram" href="https://www.instagram.com/mustbetheplacewpg/">Instagram</a>
+
             </div>
         </div>
     </body>
