--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div class="parallax">
             <div class="parallax-layer layer-front">
                  <nav>
-                    <a href="specials.html">Specials</a>
+                    <a href="specials.html">Goods & Services</a>
                     <a href="merch.html">Merch</a>
                     <a href="about.html">About</a>
                     <a class="directions" href="https://maps.app.goo.gl/KHuusXZW7TB8BsHW7">Directions</a>
