lets just push this all for now, i like the changes

--- a/specials.html
+++ b/specials.html
@@ -7,18 +7,22 @@
 </head>
 
 <body>
-    
+
 
     <div class="about">
         <span>Our Drink and Food menu constantly rotates with a regular feature of Build Your Own Sandwhiches and
             Nachos.</span>
     </div>
-<div id="space"><h1>Goods & <br> Services</h1></div>
+    <div id="space">
+        <h1>Goods & <br> Services</h1>
+    </div>
     <div class="flex">
 
         <div class="ska , card">
+            <img src="img/img8.jpg">
             <h2>Ska Sundaze</h2>
-
+            
+            <p>Ska Sundaze features our Homaemade Corn Dogs and a Long Island drink special!</p>
         </div>
         <div class="craft , card">
             <h2>Craft Mondays</h2>
@@ -31,7 +35,10 @@
         </div>
 
         <div class="rotate , block">
-            <span><H2>Rotating</H2> We contsistently have rotate our food items with weekend/holiday specials and seasonal riffs</span>
+            <span>
+                <H2>Rotating</H2> We contsistently have rotate our food items with weekend/holiday specials and seasonal
+                riffs
+            </span>
             <li>Egg Nog</li>
             <li>Tea Party</li>
             <li>Valentines</li>
